--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -33,8 +31,9 @@
         android:hint="@string/e_mail"
         android:inputType="textEmailAddress"
         android:padding="15dp"
-        android:textSize="15sp"
-        />
+        android:text="a.mooon8893@gmail.com"
+        android:textSize="15sp" />
+
     <EditText
         android:id="@+id/edt_password"
         android:layout_width="match_parent"
@@ -48,6 +47,7 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="15dp"
+        android:text="12345678"
         android:textSize="15sp" />
 
 
