--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,88 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_marginStart="9dp"
     tools:context="fragment.LoginFragment">
 
 
     <TextView
         android:id="@+id/tv_subtitle"
-        android:layout_width="match_parent"
-        android:layout_height="145dp"
-        android:layout_gravity="left|end"
-        android:layout_marginStart="25dp"
-        android:layout_marginBottom="50dp"
+        android:layout_width="200dp"
+        android:layout_height="76dp"
+        android:layout_marginBottom="428dp"
         android:fontFamily="@font/berkshire_swash"
         android:text="@string/login"
-
-        android:textSize="45dp" />
+        android:textSize="45dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/edt_email" />
 
     <EditText
         android:id="@+id/edt_email"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_above="@id/et_password"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="44dp"
         android:drawableStart="@drawable/person"
         android:drawablePadding="5dp"
         android:hint="@string/e_mail"
         android:inputType="textEmailAddress"
         android:padding="15dp"
         android:text="a.mooon8893@gmail.com"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/edt_password"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
         android:id="@+id/edt_password"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_centerInParent="false"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="20dp"
+        android:layout_width="327dp"
+        android:layout_height="52dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="128dp"
         android:drawableStart="@drawable/password"
         android:drawablePadding="5dp"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="15dp"
         android:text="12345678"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@+id/register"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <Button
+        android:id="@+id/btnd_login"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="184dp"
+        android:background="#BBBBBB"
+        android:text="@string/login"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/register"
 
-    <RelativeLayout
+        app:layout_constraintStart_toStartOf="@+id/edt_email" />
+
+    <TextView
+        android:id="@+id/register"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <Button
-            android:id="@+id/btnd_login"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="20dp"
-            android:background="#BBBBBB"
-            android:text="@string/login"
-            android:textSize="30dp"
-            android:textAlignment="center"
-            android:textColor="@android:color/white" />
-
-        <TextView
-            android:id="@+id/register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="83dp"
-            android:layout_marginBottom="51dp"
-            android:text="@string/for_register"
-            android:textColor="#000"
-            android:textSize="20sp" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="96dp"
+        android:layout_marginBottom="100dp"
+        android:text="@string/for_register"
+        android:textColor="#000"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:clickable="true"
+        android:focusable="true" />
 
 
-    </RelativeLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
