--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,23 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-            <item
-                android:id="@+id/nav_login"
-                android:title="@string/nav_login" />
             <item
                 android:id="@+id/nav_history"
                 android:title="@string/nav_history" />
-
-
             <item
                 android:id="@+id/nav_logout"
                 android:title="@string/nav_logout"/>
-    <item
-        android:id="@+id/nav_contact"
-        android:title="@string/nav_contact"/>
-    <item
-        android:id="@+id/nav_about_app"
-        android:title="@string/nav_about_app"/>
+            <item
+                android:id="@+id/nav_contact"
+                android:title="@string/nav_contact" />
+            <item
+                android:id="@+id/nav_about_app"
+                android:title="@string/nav_about_app"/>
 </menu>
 
 
