--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,15 +11,15 @@
 
     <TextView
         android:id="@+id/tv_subtitle"
-        android:layout_width="200dp"
-        android:layout_height="76dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="490dp"
+        android:layout_width="173dp"
+        android:layout_height="69dp"
+        android:layout_marginBottom="472dp"
         android:fontFamily="@font/berkshire_swash"
         android:text="@string/login"
         android:textSize="45dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.452"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
@@ -28,16 +28,15 @@
         android:layout_height="54dp"
         android:layout_marginBottom="44dp"
         android:drawableStart="@drawable/person"
-        android:drawablePadding="5dp"
         android:hint="@string/e_mail"
         android:inputType="textEmailAddress"
         android:padding="15dp"
         android:text="a.mooon8893@gmail.com"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@id/edt_password"
-        app:layout_constraintBottom_toTopOf="@+id/edt_password"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/edt_password"
@@ -51,26 +50,28 @@
         android:padding="15dp"
         android:text="12345678"
         android:textSize="15sp"
-        app:layout_constraintBottom_toTopOf="@id/btnd_login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/edt_email"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/edt_email"
+        app:layout_constraintTop_toBottomOf="@+id/edt_email" />
 
     <Button
         android:id="@+id/btnd_login"
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="184dp"
+        android:layout_height="wrap_content"
         android:background="#BBBBBB"
         android:text="@string/login"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/edt_password"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="@+id/edt_password"
+        app:layout_constraintTop_toBottomOf="@+id/edt_password" />
 
     <TextView
         android:id="@+id/register"
