--- a/app/src/main/res/layout/activity_function.xml
+++ b/app/src/main/res/layout/activity_function.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tabs"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="#5A8153"
+        android:background="#EF6C00"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
