--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -61,8 +61,9 @@
         android:fontFamily="@font/architects_daughter"
         android:hint="Enter yout Email"
         android:paddingLeft="60dp"
-        android:textColor="#0000000"
+        android:text="a.mooon8893@gmail.com"
         android:textSize="40px"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView_login" />
@@ -79,7 +80,8 @@
         android:paddingLeft="60dp"
         android:textColor="#000000"
         android:inputType="textPassword"
-        android:textSize="40px"
+        android:text="12345678"
+        android:textSize="80px"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_email" />
@@ -101,21 +103,19 @@
         android:layout_width="86dp"
         android:layout_height="86dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/ic_login1"
         android:onClick="slideUp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.951"
+        app:layout_constraintHorizontal_bias="0.936"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="77dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="12dp"
+        android:layout_width="54dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="@font/architects_daughter"
         android:onClick="slideUp"
         android:text="@string/login"
@@ -130,13 +130,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="sans-serif-condensed"
         android:text="Don't you have an account? Create"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.197"
+        app:layout_constraintHorizontal_bias="0.158"
         app:layout_constraintStart_toStartOf="parent" />
 
 
