--- a/app/src/main/res/layout/fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_bill.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tv_pay"
     android:layout_width="match_parent"
@@ -7,33 +8,54 @@
     tools:context=".fragment.BillFragment">
 
     <ImageView
-        android:layout_width="350dp"
-        android:layout_height="350dp"
-        android:layout_gravity="center"
-        android:id="@+id/barcode_img" />
+        android:id="@+id/barcode_img"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="190dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="60dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_date"
         android:layout_width="250dp"
         android:layout_height="100dp"
-        android:layout_marginStart="70dp"
-        android:layout_marginTop="100dp" />
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintBottom_toTopOf="@+id/barcode_img"
+        app:layout_constraintStart_toStartOf="@+id/barcode_img"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/totalbill_tv"
         android:layout_width="99dp"
-        android:layout_height="100dp"
+        android:layout_height="0dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="550dp" />
+        android:layout_marginBottom="81dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textView5" />
 
     <TextView
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_gravity=""
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="600dp"
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="90dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginEnd="91dp"
+        android:layout_marginRight="91dp"
+        android:layout_marginBottom="31dp"
         android:text="@string/tv_bill"
         android:textSize="40dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/barcode_img"
+        app:layout_constraintTop_toBottomOf="@+id/barcode_img" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
