--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#00796b</color>
     <color name="colorPrimaryDark">#00695C</color>
     <color name="colorAccent">#4081</color>
+    <color name="QRCodeBlackColor">#000</color>
+    <color name="QRCodeWhiteColor">#fff</color>
 </resources>
