--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -22,7 +22,7 @@
         android:layout_width="146dp"
         android:layout_height="53dp"
         android:fontFamily="casual"
-        android:text="HSabi"
+        android:text="@string/textView"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
