--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -31,7 +31,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/amita_bold"
-        android:text="HSabi App"
+        android:text="@string/textView3"
         android:textColor="#000000"
         android:textSize="32px"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,7 +132,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
         android:fontFamily="sans-serif-condensed"
-        android:text="Don't you have an account? Create"
+        android:text="@string/register"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
