--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -2,14 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#B1AEAE">
+    >
 
     <LinearLayout
+        android:background="@color/colorPrimary"
         android:id="@+id/layout_total"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:padding="5dp"
-        android:background="#EF6C00"
         android:weightSum="2">
 
         <TextView
@@ -17,10 +18,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="@string/total"
             android:textAlignment="center"
-            android:textSize="25dp"
-            android:textStyle="bold"
-            android:text="@string/total"/>
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_total"
@@ -29,8 +31,9 @@
             android:layout_weight="1"
             android:text="@string/tv_total"
             android:textAlignment="center"
-            android:textSize="25dp"
-            android:textStyle="bold"/>
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
 
@@ -46,14 +49,16 @@
     <Button
         android:id="@+id/btn_placeorder"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="56dp"
         android:layout_alignParentBottom="true"
         android:layout_gravity="center"
-        android:background="#EF6C00"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/colorPrimary"
         android:onClick="insertOrder"
         android:text="@string/btn_bill"
-        android:textColor="@android:color/background_dark"
-        android:textSize="24dp"/>
+        android:textColor="@android:color/background_light"
+        android:textSize="24sp" />
 
 
 </RelativeLayout>
