--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -8,7 +8,9 @@
         android:id="@+id/btn_Scan"
         android:layout_width="230dp"
         android:layout_height="90dp"
+        android:backgroundTint="@color/colorPrimary"
         android:text="@string/btn_barcode"
+        android:textColor="#FFFFFF"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/tv_or"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,7 +34,9 @@
         android:id="@+id/btn_no_barcode"
         android:layout_width="150dp"
         android:layout_height="60dp"
+        android:backgroundTint="@color/colorPrimary"
         android:text="@string/btn_no_barcode"
+        android:textColor="#FFFFFF"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
